core/tests/errors/conflicting_declarations.rain
let main = fn() {}

let foo = fn() { }
let foo = fn() { }
